--- a/caloomhtml/UI/docs/oip-additions/oip-assets/oip-css/bootstrap-responsive.css
+++ b/caloomhtml/UI/docs/oip-additions/oip-assets/oip-css/bootstrap-responsive.css
@@ -909,7 +909,7 @@
     position: static;
   }
   .navbar-fixed-top {
-    margin-bottom: 20px;
+    margin-bottom: 0px;
   }
   .navbar-fixed-bottom {
     margin-top: 20px;
